--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   },
   "dependencies": {
     "@vueuse/core": "^10.1.2",
+    "element-plus": "^2.3.5",
     "vue": "^3.3.4",
     "vue-router": "^4.2.1"
   },
